Cara newest changes

--- a/CGALogin/Other project files/Base.lproj/Main.storyboard
+++ b/CGALogin/Other project files/Base.lproj/Main.storyboard
@@ -279,7 +279,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hfs-M5-PUA">
-                                <rect key="frame" x="0.0" y="123" width="374.33333333333331" height="38"/>
+                                <rect key="frame" x="0.0" y="123" width="393" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="COE-Ii-TTr"/>
@@ -295,7 +295,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jy6-AC-uzE">
-                                <rect key="frame" x="0.0" y="330" width="374.33333333333331" height="38"/>
+                                <rect key="frame" x="0.0" y="330" width="393" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="Pkc-7b-EmG"/>
@@ -331,7 +331,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XkO-4x-he5">
-                                <rect key="frame" x="107.33333333333331" y="186" width="260" height="35"/>
+                                <rect key="frame" x="126" y="186" width="260" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="260" id="kok-4F-txd"/>
                                     <constraint firstAttribute="height" constant="35" id="rTD-0A-1aV"/>
@@ -340,7 +340,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xZJ-np-GYS">
-                                <rect key="frame" x="107.33333333333331" y="246" width="260" height="35"/>
+                                <rect key="frame" x="126" y="246" width="260" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="260" id="9nN-av-HEf"/>
                                     <constraint firstAttribute="height" constant="35" id="jFu-b5-mr1"/>
@@ -349,7 +349,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h9S-LX-qhp">
-                                <rect key="frame" x="287.33333333333331" y="288" width="80" height="35"/>
+                                <rect key="frame" x="306" y="288" width="80" height="35"/>
                                 <color key="backgroundColor" red="0.67001634836196899" green="0.92890661954879761" blue="0.79375362396240234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="GmS-Ny-kRb"/>
@@ -361,7 +361,7 @@
                                 </buttonConfiguration>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Old Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuP-Wa-c0u">
-                                <rect key="frame" x="5" y="393" width="99.333333333333329" height="19.333333333333314"/>
+                                <rect key="frame" x="5" y="393" width="118" height="19.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -377,7 +377,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnu-VE-6FR">
-                                <rect key="frame" x="107.33333333333331" y="393" width="260" height="34"/>
+                                <rect key="frame" x="126" y="393" width="260" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="260" id="Ahi-8g-xNo"/>
                                 </constraints>
@@ -385,7 +385,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rTS-f2-Xar">
-                                <rect key="frame" x="112.00000000000001" y="452" width="255.33333333333337" height="35"/>
+                                <rect key="frame" x="126" y="452" width="260" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="SXJ-Nr-dKi"/>
                                     <constraint firstAttribute="width" constant="260" id="cIB-ef-ayn"/>
@@ -394,7 +394,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxB-4S-bW3">
-                                <rect key="frame" x="287.33333333333331" y="494" width="80" height="35"/>
+                                <rect key="frame" x="306" y="494" width="80" height="35"/>
                                 <color key="backgroundColor" red="0.67001634836196899" green="0.92890661954879761" blue="0.79375362396240234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="QhM-ug-YDz"/>
@@ -416,21 +416,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NNq-QO-4JE">
-                                <rect key="frame" x="0.0" y="624" width="374.33333333333331" height="228"/>
+                                <rect key="frame" x="0.0" y="624" width="393" height="228"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="hsc-Yu-fpG">
-                                        <rect key="frame" x="0.0" y="50" width="374.33333333333331" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hsc-Yu-fpG" id="NmX-r7-qg8">
-                                            <rect key="frame" x="0.0" y="0.0" width="374.33333333333331" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k89-Ib-f3R">
-                                <rect key="frame" x="0.0" y="536" width="374.33333333333331" height="38"/>
+                                <rect key="frame" x="0.0" y="536" width="393" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="pXJ-L9-7Sa"/>
@@ -480,7 +480,6 @@
                             <constraint firstItem="so6-bp-D4K" firstAttribute="trailing" secondItem="sxB-4S-bW3" secondAttribute="trailing" constant="7" id="j3J-8m-zLX"/>
                             <constraint firstItem="Jy6-AC-uzE" firstAttribute="trailing" secondItem="so6-bp-D4K" secondAttribute="trailing" id="k6u-yT-v3A"/>
                             <constraint firstItem="USe-xJ-jGD" firstAttribute="top" secondItem="hWq-rg-Sod" secondAttribute="bottom" constant="25" id="lNm-qf-4Y9"/>
-                            <constraint firstItem="rTS-f2-Xar" firstAttribute="leading" secondItem="PEO-Ud-cnD" secondAttribute="trailing" constant="1" id="m7T-wZ-2lP"/>
                             <constraint firstItem="USe-xJ-jGD" firstAttribute="leading" secondItem="so6-bp-D4K" secondAttribute="leading" constant="15" id="mq0-oE-e7v"/>
                             <constraint firstItem="rTS-f2-Xar" firstAttribute="top" secondItem="wnu-VE-6FR" secondAttribute="bottom" constant="25" id="nPz-54-vth"/>
                             <constraint firstItem="sxB-4S-bW3" firstAttribute="top" secondItem="rTS-f2-Xar" secondAttribute="bottom" constant="7" id="rQ4-1U-Qrw"/>
